# kazna_2

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
practice/001/: claim.py  main.py  payment_item.py  payment_order.py  payment_position.py  payment_registry.py
src/: __version__.py  main.py
src/adapters/config/: settings.py
src/adapters/outbound/database/: base.py  schema_objects.py  utils.py
src/adapters/outbound/redis/: client.py
src/core/shared_kernel/units_of_work/: postgres.py
src/generic/api/: filters_params.py  pydantic_models.py
src/generic/database/audit_log/: __init__.py  collector.py  enums.py  types.py
src/generic/database/mixins/: archived.py  created_updated.py  soft_delete.py
src/generic/database/repositories/: base_mapper.py  types.py
src/generic/database/softdelete/: __init__.py  (+1 more)
src/generic/domain/: entity.py  exceptions.py  not_domain_exceptions.py  pagination.py  schemas.py  types.py  values.py
src/generic/units_of_work/: base.py
src/generic/utils/: log_levels.py  map_utils.py  mock_utils.py  pluck_utils.py  time_utils.py
training/01/: .02.py  cats.py  to_do.txt
training/02/: 02_context_manager.py  02_decorator copy 2.py  02_decorator copy 3.py  02_decorator copy.py  02_decorator.py  async.py  example.txt  http_POST.py  http_example copy 2.py  http_example copy.py  http_example.py  to_do.txt
training/03/: async_http_request.py  async_http_request2_context_manager copy.py  async_http_request2_context_manager.py  http_protocol.py
training/04/: 01.py  02.py  03.py  04.py  05-06.py  to_do.txt
(+42 files in other folders)
